Changelog Notes:
Fix trait description "Super Immune"
Make Quick and Slow worker mutually exclusive.
Remove Exclusivity from Prone To Illness and Immunocompromised.
Increase range for Ingenuitive percentile recipes.
Make Injured and Broke Leg traits mutually exclusive to Indefatigable to prevent abuse.