@@ -12,7 +12,7 @@ UI_EN = {
     UI_trait_preparedcamp = "Prepared: Camping",
     UI_trait_preparedcampdesc = "Before shit hit the fan, you pulled together some camping supplies.<br>You begin the game with camping supplies.",
     UI_trait_preparedpack = "Prepared: Pack",
-    UI_trait_preparedpackdesc = "You were prepared for the inevitable looting that would occur following the apocalypse.<br>You begin the game with a Big Hiking Bag.",
+    UI_trait_preparedpackdesc = "You were prepared for the inevitable looting that would occur following the apocalypse.<br>You begin the game with a Regular Hiking Bag.",
     UI_trait_swift = "Swift",
     UI_trait_swiftdesc = "+1 Lightfooted",
     UI_trait_preparedweapon = "Prepared: Weapons",
